# how-we-dev-mw

./: .gitignore  .readthedocs.yaml  pyproject.toml  readme.md
doc/: internal_upload_docu.py  make.bat  makeall.bat  myConfig.py  requirements.txt  upload_docu.py
doc/source/: 00_index.md  01_welcome.md  02_version_control.md  03_develop_at_head.md  04_never_break_main.md  05_revert.md  06_build_before_merge.md  07_small_increments.md  08_automate_the_one_build.md  09_tests.md  10_tdd.md  11_merge_daily.md  12_fast_build.md  13_build_system.md  14_decouple.md  15_educate.md  16_architecture.md  build_before_merge.md  build_system.md  conf.py  develop_at_head.md  fast_build.md  home.md  index.html  index.md  index.rst  merge_daily.md  never_break_main.md  release.md  revert.md  small_increments.md  tests.md  version_control.md  welcome.md
doc/source/_static/: custom.css  custom_epub.css
